Fix java options for to build large project